2006-01-11  Steve Frécinaux  <nud@apinc.org>

	* gtksourceview/language-specs/python.lang: allow to specify both 'u'
	and 'r' modifiers to python strings at the same time.

2006-01-08  Marco Barisione  <barisione@gmail.com>

	* gtksourceview/gtksourcelanguage-private.h,
	gtksourceview/gtksourcelanguage.c: fixes gcc 4.01 compiler warnings on
	different signedness (bug #309663)

2006-01-08  Jeroen Zwartepoorte  <jeroen.zwartepoorte@gmail.com>

	* gtksourceview/gtktextregion.c: (gtk_text_region_add),
	(gtk_text_region_substract): Fix gcc 4.01 compiler warnings.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/scheme.lang: add scheme highlighting.

2006-01-07  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/*.lang: fix some names to use singular
	for consistency.

2006-01-06  Marco Barisione  <barisione@gmail.com>

	* tests/test-widget.c: added tests to detect memory allocated by
	xmlMalloc() but not freed by xmlFree() or freed by xmlFree() but not
	allocated by xmlMalloc()

2006-01-04  Marco Barisione <barisione@gmail.com>

	* gtksourceview/gtksourceprintjob.c, tests/test-widget.c: added casts
	to avoid warnings on different signedness.
	Partially fixes bug #309663 – gcc 4.01 compiler treats pointer target
	warnings as errors

=== gtksourceview 1.5.4 ===

2006-01-04  Paolo Borelli  <pborelli@katamail.com>

	* configure.in:
	* README:
	* NEWS: release 1.5.2

2006-01-03  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #170604 – Syntax for GNU Octave
	
	* gtksourceview/language-specs/Makefile.am: added octave.lang
	
	* gtksourceview/language-specs/octave.lang: new file by
	Søren Hauberg <soren@hauberg.org> and 
	Muthiah Annamalai <gnumuthu@users.sf.net>

=== gtksourceview 1.5.3 ===

2006-01-02  Paolo Maggi  <paolo@gnome.org>

	* configure.in:
	* README:
	* NEWS: release 1.5.3

2006-01-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c: avoid some strdups when parsing
	mime types.
